Bug 391698 - Command line arguments ignored
Summary: Command line arguments ignored
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.7.7
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-11 05:03 UTC by Christian Muehlhaeuser
Modified: 2020-12-04 22:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Muehlhaeuser 2018-03-11 05:03:15 UTC
When starting Konversation with "irc://server/channel" as a cli-arg, it gets ignored unless a Konversation instance is already running. In other words I have to click an irc:// link twice: once to start Konversation, and once more to make it connect to that server and join the channel.
Comment 1 Eike Hein 2018-03-11 06:44:22 UTC
Seems like a Qt5 porting regression.
Comment 2 Justin Zobel 2020-11-30 03:40:33 UTC
Confirmed still an issue on 1.7.7.
Comment 3 Bug Janitor Service 2020-11-30 09:04:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/konversation/-/merge_requests/34
Comment 4 Friedrich W. H. Kossebau 2020-12-04 22:28:11 UTC
Git commit ea484d1b6042c593c3da247a2449f2ad9e37c629 by Friedrich W. H. Kossebau.
Committed on 04/12/2020 at 22:27.
Pushed by kossebau into branch 'release/20.12'.

Fix missed handling of a irc:// url cmdl arg on app start

Application::handleActivate() handles the arguments passed from the signal
KDBusService::activateRequested. The API dox of the signal tells:
"
The arguments the executable was called with, starting with the
executable file name. See QCoreApplication::arguments().
This can also be empty.
"
267e3762ad9f151539fd7dda2a83bdcbc60103c5 tried to handle the case of
no args passed, which though created bug 374690, which then got treated
by 2605c61fcaec65f2223a8ad91c39005f09047642, which then created bug 391698.

Hopefully we end the chain here :)

M  +3    -3    src/application.cpp

https://invent.kde.org/network/konversation/commit/ea484d1b6042c593c3da247a2449f2ad9e37c629