Fix missed handling of a irc:// url cmdl arg on app start

Application::handleActivate() handles the arguments passed from the signal
KDBusService::activateRequested. The API dox of the signal tells:
"
The arguments the executable was called with, starting with the
executable file name. See QCoreApplication::arguments().
This can also be empty.
"
267e3762ad9f151539fd7dda2a83bdcbc60103c5 tried to handle the case of
no args passed, which though created bug 374690, which then got treated
by 2605c61fcaec65f2223a8ad91c39005f09047642, which then created bug 391698.

Hopefully we end the chain here :)

BUG: 391698